<resources>
    <string name="app_name">Cimagenda 2.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_horario">Horario</string>
    <string name="title_activity_calendario">Calendario</string>
    <string name="title_activity_materias">Materias</string>
    <string name="title_activity_usuario">Usuario</string>
    <string name="agenda">Agenda</string>
    <string name="horario">Horario</string>
    <string name="calendario">Calendario</string>
    <string name="materias">Materias</string>
    <string name="usuario">Usuario</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="examen">Examen</string>
    <string name="tarea">Tarea</string>
</resources>
